--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,9 +1,8 @@
 // COLORS
 $color-white: #fff;
-$color-black: #8a8a8a;
-$color-grey: #f5f5f5;
-$color-main: #212121;
-$color-secondary: #16a085;
+$color-grey: #f7f7f7;
+$color-main: #007b2c;
+$color-secondary: #55e88a;
 $color-dark: #000000;
 $card-color-main: #7ed567;
 $card-color-secondary: #28b485;
