--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,14 +1,12 @@
 .header{
-	background: linear-gradient(
-    to right bottom, 
-    rgba($color-main, 0.9), 
-    rgba($color-dark, 0.9)),
-	url("../images/header-background.jpg") no-repeat 50%/cover;
+	background:
+	url("../images/header-background.png") no-repeat 50%/cover;
 	background-attachment: fixed;
-    background-position: left;
+    background-position: center;
     height: 95vh;
 	position: relative;
-	color: $color-white;
+	color: $color-secondary;
+	z-index: 1;
 
     animation: moveInDown .5s ease-out;
     -webkit-clip-path: polygon(0% 0%, 100% 0, 100% 85vh, 0 100%);
@@ -16,7 +14,6 @@
     // LOGO
 	&__logo{
     animation: moveInRight 1.5s ease-out;
-    color: $color-white;
     font-size: 2rem;
     padding: 2rem;
 	}
@@ -24,7 +21,7 @@
 	&__image{
 	width: 25%;
     position: absolute;
-    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
+    box-shadow: 0 1.5rem 4rem rgba($color-grey, 0.4);
     transition: all .2s;
     outline-offset: 1rem;
 
@@ -48,15 +45,17 @@
 	}
     // TYPO
     &__heading{
+    font-size: 2rem;
+    padding: 2rem;
     display: table;
     padding: 0rem 2rem;
     position: absolute;
-	top: 67vh;
+	top: 40vh;
 	left: 50%;
 	transform: translateX(-50%);
 	&__primary{
 	display: block;
-	line-height: 1.3;
+	line-height: 2;
 	}
 	&__sub{
 	display: block;
@@ -67,75 +66,3 @@
 }
 }
 
-// MIXINS
-@include device(ipad-pro){
-	.header{
-	&__heading{
-	top: 64vh;
-	}
-}
-}
-
-
-@include device(tab-landscape){
-	.header{
-	&__image{
-	width: 27%;
-	}
-}
-}
-
-@include device(ipad){
-	.header{
-	&__image--number3 {
-    left: 54%;
-    top: 18rem;
-    }
-    &__heading{
-    top: 58vh;
-    }
-}
-}
-
-@include device(phone){
-	.header{
-	&__image{
-	width: 34%;
-	}
-	&__image--number1 {
-    left: 10%;
-    top: 19rem;
-    }
-    &__image--number2 {
-    left: 31%;
-    top: 10rem;
-    }
-    &__image--number3 {
-    left: 54%;
-    top: 19rem;
-    }
-    &__heading{
-    top: 56vh;
-    }
-}
-}
-
-@include device(xsm-phone){
-	.header{
-	&__image{
-	width: 39%;
-	}
-	&__image--number1 {
-    top: 26rem;
-    }
-    &__image--number2 {
-    top: 19rem;
-    }
-    &__image--number3 {
-    top: 26rem;
-    }
-    &__heading{
-    top: 63vh;
-    }
-}
-}
