--- a/sass/layouts/_navigation.scss
+++ b/sass/layouts/_navigation.scss
@@ -99,7 +99,7 @@
 	width: 3rem;
 	height: 2px;
 	display: inline-block;
-	background-color: $color-dark;
+	background-color: $color-main;
 	}
 
 	&::before,
