--- a/css/styles.css
+++ b/css/styles.css
@@ -25,13 +25,13 @@ html {
       font-size: 50%; } }
 
 body {
-  font-family: 'Lato', sans-serif;
-  font-size: 1.6rem;
-  font-weight: 400;
+  font-family: 'Lato', sans serif;
+  font-size: 1.65rem;
+  font-weight: 300;
+  color: #000000;
+  line-height: 2.2;
   letter-spacing: .1rem;
-  word-spacing: .2rem;
-  color: #333;
-  line-height: 2; }
+  word-spacing: .1rem; }
 
 .flex {
   display: flex;
@@ -66,43 +66,45 @@ span {
     padding: 0 1rem;
     border-radius: 3rem;
     display: inline-block;
-    border: 2px solid #16a085;
+    border: 2px solid #55e88a;
     background: transparent;
-    color: #fff;
+    color: #55e88a;
     transition: all .4s ease; }
   .btn__green--sm:hover {
     color: #fff;
-    background: #16a085; }
-  .btn__white--sm:link, .btn__white--sm:visited {
+    background: #007b2c; }
+  .btn__mainBtn--sm:link, .btn__mainBtn--sm:visited {
     text-decoration: none;
     padding: 0 1rem;
     border-radius: 3rem;
     display: inline-block;
     border-radius: inherit;
     transition: all .2s ease;
-    color: #fff;
-    border-left: 2px solid #fff; }
-    .btn__white--sm:link:hover, .btn__white--sm:visited:hover {
+    color: #007b2c;
+    border-left: 2px solid #007b2c; }
+    .btn__mainBtn--sm:link:hover, .btn__mainBtn--sm:visited:hover {
       background: transparent;
       border-radius: inherit; }
-  .btn__white--sm:hover {
-    color: #fff;
-    border-bottom: 2px solid #fff; }
-  .btn__dark--sm:link, .btn__dark--sm:visited {
+  .btn__mainBtn--sm:hover {
+    color: #55e88a;
+    border-bottom: 2px solid #55e88a;
+    border-left: 2px solid #55e88a; }
+  .btn__darkBtn--sm:link, .btn__darkBtn--sm:visited {
     text-decoration: none;
     padding: 0 1rem;
     border-radius: 3rem;
     display: inline-block;
     border-radius: inherit;
     transition: all .2s ease;
-    color: #212121;
-    border-left: 2px solid #212121; }
-    .btn__dark--sm:link:hover, .btn__dark--sm:visited:hover {
+    color: #007b2c;
+    border-left: 2px solid #007b2c; }
+    .btn__darkBtn--sm:link:hover, .btn__darkBtn--sm:visited:hover {
       background: transparent;
       border-radius: inherit; }
-  .btn__dark--sm:hover {
-    border-bottom: 2px solid #212121;
-    color: #000000; }
+  .btn__darkBtn--sm:hover {
+    border-bottom: 2px solid #55e88a;
+    border-left: 2px solid #55e88a;
+    color: #55e88a; }
 
 #mc_embed_signup {
   display: block; }
@@ -111,12 +113,13 @@ span {
   background: transparent;
   border: none;
   font-size: 2rem;
-  border-left: 2px solid #212121;
+  color: #fff;
+  border-left: 2px solid #fff;
   padding: 1rem 2rem;
   cursor: pointer;
   transition: all .4s ease; }
   #mc-embedded-subscribe:hover {
-    border-bottom: 2px solid #212121; }
+    border-bottom: 2px solid #fff; }
 
 .mc-embed-div {
   text-align: center; }
@@ -136,13 +139,12 @@ span {
     width: 100%;
     border-radius: 1rem;
     backface-visibility: hidden;
-    box-shadow: 0 5px 5px 0 rgba(233, 240, 243, 0.5); }
+    box-shadow: 0 3px 10px 0 rgba(233, 240, 243, 0.5); }
     .cards__side--front {
-      background-image: linear-gradient(to right, #212121, black);
-      color: #212121; }
+      background: #fff; }
     .cards__side--back {
-      background: #f5f5f5;
-      transform: rotateY(180deg); }
+      transform: rotateY(180deg);
+      background-image: linear-gradient(to right, #55e88a, #007b2c); }
   .cards:hover .cards__side--front {
     transform: rotateY(-180deg); }
   .cards:hover .cards__side--back {
@@ -155,29 +157,25 @@ span {
 .ul {
   list-style: none; }
 
-.logo-link:link, .logo-link:visited {
-  text-decoration: none;
-  color: #fff; }
-
 .header {
-  background: linear-gradient(to right bottom, rgba(33, 33, 33, 0.9), rgba(0, 0, 0, 0.9)), url("../images/header-background.jpg") no-repeat 50%/cover;
+  background: url("../images/header-background.png") no-repeat 50%/cover;
   background-attachment: fixed;
-  background-position: left;
+  background-position: center;
   height: 95vh;
   position: relative;
-  color: #fff;
+  color: #55e88a;
+  z-index: 1;
   animation: moveInDown .5s ease-out;
   -webkit-clip-path: polygon(0% 0%, 100% 0, 100% 85vh, 0 100%);
   clip-path: polygon(0% 0%, 100% 0, 100% 85vh, 0 100%); }
   .header__logo {
     animation: moveInRight 1.5s ease-out;
-    color: #fff;
     font-size: 2rem;
     padding: 2rem; }
   .header__image {
     width: 25%;
     position: absolute;
-    box-shadow: 0 1.5rem 4rem rgba(138, 138, 138, 0.4);
+    box-shadow: 0 1.5rem 4rem rgba(247, 247, 247, 0.4);
     transition: all .2s;
     outline-offset: 1rem; }
     .header__image:hover {
@@ -194,72 +192,32 @@ span {
       left: 53%;
       top: 20rem; }
   .header__heading {
+    font-size: 2rem;
+    padding: 2rem;
     display: table;
     padding: 0rem 2rem;
     position: absolute;
-    top: 67vh;
+    top: 40vh;
     left: 50%;
     transform: translateX(-50%); }
     .header__heading__primary {
       display: block;
-      line-height: 1.3; }
+      line-height: 2; }
     .header__heading__sub {
       display: block; }
     .header__heading__btn {
       display: inline-block; }
-
-@media (max-width: 64em) {
-  .header__heading {
-    top: 64vh; } }
-
-@media (max-width: 56.25em) {
-  .header__image {
-    width: 27%; } }
-
-@media (max-width: 48em) {
-  .header__image--number3 {
-    left: 54%;
-    top: 18rem; }
-  .header__heading {
-    top: 58vh; } }
-
-@media (max-width: 658px) {
-  .header__image {
-    width: 34%; }
-  .header__image--number1 {
-    left: 10%;
-    top: 19rem; }
-  .header__image--number2 {
-    left: 31%;
-    top: 10rem; }
-  .header__image--number3 {
-    left: 54%;
-    top: 19rem; }
-  .header__heading {
-    top: 56vh; } }
-
-@media (max-width: 33.75em) {
-  .header__image {
-    width: 39%; }
-  .header__image--number1 {
-    top: 26rem; }
-  .header__image--number2 {
-    top: 19rem; }
-  .header__image--number3 {
-    top: 26rem; }
-  .header__heading {
-    top: 63vh; } }
 
 .composition {
   position: relative; }
   .composition__image {
     width: 44%;
     position: absolute;
-    box-shadow: 0 1.5rem 4rem rgba(138, 138, 138, 0.4);
+    box-shadow: 0 1.5rem 4rem rgba(247, 247, 247, 0.4);
     transition: all .2s;
     outline-offset: 1rem; }
     .composition__image:hover {
-      outline: 0.5rem solid #000000;
+      outline: 0.5rem solid #f7f7f7;
       transform: scale(1.05);
       z-index: 20; }
     .composition__image--number1 {
@@ -297,22 +255,23 @@ span {
   margin-bottom: 3rem; }
 
 .footer {
-  background-color: black; }
+  margin-top: -2rem;
+  background-color: #007b2c; }
   .footer__logo {
     display: block;
     text-align: center;
     font-size: 3rem; }
     .footer__logo--link {
-      color: #16a085 !important; }
+      color: #fff !important; }
   .footer__navigation {
     text-align: center; }
   .footer__li {
     display: inline;
     padding: 0 2rem;
-    border-right: 1px solid #212121; }
+    border-right: 1px solid #007b2c; }
   .footer__links {
     font-size: 3rem;
-    color: #f5f5f5; }
+    color: #f7f7f7; }
 
 .more {
   display: flex;
@@ -321,28 +280,28 @@ span {
   .more__info {
     margin: 2rem;
     padding: 1rem;
-    background: #212121;
-    color: #16a085;
+    background: #007b2c;
+    color: #55e88a;
     transform: skewX(-15deg); }
 
-.heading__onWhite--main {
+.heading__onMainBg--main {
   font-size: 4rem;
   text-transform: uppercase;
   display: inline-block;
   -webkit-background-clip: text;
   color: transparent;
-  background-image: linear-gradient(to left, rgba(33, 33, 33, 0.8), rgba(0, 0, 0, 0.8)); }
+  background-image: linear-gradient(to right bottom, rgba(0, 123, 44, 0.9), rgba(85, 232, 138, 0.9)); }
 
-.heading__onWhite--sub {
+.heading__onMainBg--sub {
   display: block; }
 
-.heading__onDark--main {
+.heading__onDarkBg--main {
   font-size: 4rem;
   text-transform: uppercase;
   display: inline-block;
   -webkit-background-clip: text;
   color: transparent;
-  background-image: linear-gradient(to left, rgba(255, 255, 255, 0.8), rgba(245, 245, 245, 0.8)); }
+  background-image: linear-gradient(to left, rgba(85, 232, 138, 0.8), rgba(0, 123, 44, 0.8)); }
 
 .text-center {
   text-align: center; }
@@ -410,7 +369,7 @@ span {
   top: 2rem;
   right: 2rem;
   z-index: 100;
-  background-image: linear-gradient(to left, rgba(255, 255, 255, 0.7), rgba(245, 245, 245, 0.7));
+  background-image: linear-gradient(to left, rgba(255, 255, 255, 0.7), rgba(247, 247, 247, 0.7));
   transition: transform 0.8s cubic-bezier(0.6, -0.28, 0.735, 0.045); }
 
 .navigation__nav {
@@ -464,7 +423,7 @@ span {
     width: 3rem;
     height: 2px;
     display: inline-block;
-    background-color: #000000; }
+    background-color: #007b2c; }
   .navigation__icon::before, .navigation__icon::after {
     content: "";
     position: absolute;
@@ -489,42 +448,61 @@ span {
 .wrapper {
   padding: 1rem; }
 
-.website-intro {
+.logo-link:link, .logo-link:visited {
+  text-decoration: none;
+  color: #55e88a; }
+
+.intro {
+  background: #f7f7f7;
   margin-top: -10vh;
-  padding-top: 14rem; }
-  .website-intro__composition {
+  padding-top: 14rem;
+  transform: skewY(-2deg);
+  position: relative; }
+  .intro > * {
+    transform: skewY(2deg); }
+  .intro__composition {
     height: 30rem; }
+  .intro__section-1 {
+    border-right: 1px solid #007b2c;
+    padding-right: 2rem; }
+  .intro__section-2 {
+    padding-right: 2rem; }
 
 .about {
   transform: skewY(-2deg);
-  background: linear-gradient(to right bottom, rgba(33, 33, 33, 0.9), rgba(0, 0, 0, 0.9)), url("../images/header-background.jpg") no-repeat 50%/cover;
-  background-attachment: fixed;
-  background-position: left;
-  color: #fff; }
+  background: #000000;
+  color: #fff;
+  margin-top: -1rem; }
   .about > * {
     transform: skewY(2deg); }
   .about__composition {
     height: 30rem; }
 
 .experience {
+  background: linear-gradient(to right bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../images/header-background.png") no-repeat 50%/cover;
+  background-attachment: fixed;
+  background-position: center;
   transform: skewY(-2deg);
-  positive: relative; }
+  positive: relative;
+  margin-top: -1rem;
+  color: #fff; }
   .experience__icons {
     font-size: 3rem;
     justify-content: center;
     display: flex;
     padding: 2rem;
-    color: #f5f5f5;
-    font-weight: 700;
-    border-bottom: 1px solid #16a085; }
+    color: #000000;
+    font-weight: 100;
+    border-bottom: 1px solid #55e88a; }
   .experience__content-box {
     text-align: center;
-    color: #16a085; }
+    color: #007b2c;
+    font-weight: 500; }
   .experience__content-box-back {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    color: #16a085;
+    color: #fff;
     padding: 3rem;
     letter-spacing: 3px;
     text-align: center; }
@@ -532,12 +510,10 @@ span {
     transform: skewY(2deg); }
 
 .projects {
+  background: #f7f7f7;
   text-align: center;
-  background: linear-gradient(to right bottom, rgba(33, 33, 33, 0.9), rgba(0, 0, 0, 0.9)), url("../images/header-background.jpg") no-repeat 50%/cover;
-  background-attachment: fixed;
-  background-position: left;
-  color: #fff;
-  transform: skewY(-2deg); }
+  transform: skewY(-2deg);
+  margin-top: -1rem; }
   .projects > * {
     transform: skewY(2deg); }
 
@@ -560,12 +536,13 @@ span {
     top: 27%;
     left: 50%;
     opacity: 0;
-    color: #fff;
+    color: #007b2c;
     font-size: 1.4rem;
     transition: all .8s;
     backface-visibility: hidden;
-    transition: all .8s;
-    text-align: center; }
+    transition: all .8s ease;
+    text-align: center;
+    z-index: 5000; }
   .projects-wrap:hover .projects-wrap__caption {
     opacity: 1;
     transform: translate(-50%, 20%);
@@ -574,11 +551,25 @@ span {
     transform: scale(1.1);
     text-align: center;
     z-index: 100;
-    filter: blur(2px) brightness(80%); }
+    filter: blur(2px) grayscale(100%); }
+
+.contact {
+  background: linear-gradient(to right bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../images/header-background.png") no-repeat 50%/cover;
+  background-attachment: fixed;
+  background-position: center;
+  transform: skewY(-2deg);
+  color: #007b2c; }
+  .contact > * {
+    transform: skewY(2deg); }
 
 @media (max-width: 658px) {
   .about__composition {
     height: 23rem; } }
+
+@media (max-width: 48em) {
+  .intro__section-1 {
+    padding-right: initial;
+    border-right: none; } }
 
 @media (max-width: 64em) {
   .about .grid-6 {
