--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,13 +14,13 @@ html{
 	
 }
 body{
-	font-family: 'Lato', sans-serif;
-	font-size: 1.6rem;
-	font-weight: 400;
+	font-family: 'Lato', sans serif;
+	font-size: 1.65rem;
+	font-weight: 300;
+	color: #000000;
+	line-height: 2.2;
 	letter-spacing: .1rem;
-	word-spacing: .2rem;
-	color: #333;
-	line-height: 2;
+	word-spacing: .1rem;
 }
 
 // FLEX BOXES
