--- a/sass/components/_images.scss
+++ b/sass/components/_images.scss
@@ -5,12 +5,12 @@
 	&__image{
 	width: 44%;
     position: absolute;
-    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
+    box-shadow: 0 1.5rem 4rem rgba($color-grey, 0.4);
     transition: all .2s;
     outline-offset: 1rem;
 
     &:hover{
-    outline: .5rem solid $color-dark;
+    outline: .5rem solid $color-grey;
     transform: scale(1.05);
     z-index: 20;
     }
