change header background

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,6 +1,6 @@
 .header{
 	background:
-	url("../images/header-background.png") no-repeat 50%/cover;
+	url("../images/header-background.jpg") no-repeat 50%/cover;
 	background-attachment: fixed;
     background-position: center;
     height: 95vh;
