--- a/css/styles.css
+++ b/css/styles.css
@@ -158,7 +158,7 @@ span {
   list-style: none; }
 
 .header {
-  background: url("../images/header-background.png") no-repeat 50%/cover;
+  background: url("../images/header-background.jpg") no-repeat 50%/cover;
   background-attachment: fixed;
   background-position: center;
   height: 95vh;
