--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 // COLORS
 $color-white: #fff;
 $color-grey: #f7f7f7;
-$color-main: #007b2c;
+$color-main: #00ff00;
 $color-secondary: #55e88a;
 $color-dark: #000000;
 $card-color-main: #7ed567;
