--- a/css/styles.css
+++ b/css/styles.css
@@ -20,9 +20,6 @@ more than 1800 =  Big Desktop
 
 html {
   font-size: 62.5%; }
-  @media (max-width: 658px) {
-    html {
-      font-size: 50%; } }
 
 body {
   font-family: 'Lato', sans serif;
@@ -66,13 +63,13 @@ span {
     padding: 0 1rem;
     border-radius: 3rem;
     display: inline-block;
-    border: 2px solid #55e88a;
+    border: 2px solid #00ff00;
     background: transparent;
-    color: #55e88a;
+    color: #00ff00;
     transition: all .4s ease; }
   .btn__green--sm:hover {
     color: #fff;
-    background: #007b2c; }
+    background: #00ff00; }
   .btn__mainBtn--sm:link, .btn__mainBtn--sm:visited {
     text-decoration: none;
     padding: 0 1rem;
@@ -80,15 +77,15 @@ span {
     display: inline-block;
     border-radius: inherit;
     transition: all .2s ease;
-    color: #007b2c;
-    border-left: 2px solid #007b2c; }
+    color: #00ff00;
+    border-left: 2px solid #00ff00; }
     .btn__mainBtn--sm:link:hover, .btn__mainBtn--sm:visited:hover {
       background: transparent;
       border-radius: inherit; }
   .btn__mainBtn--sm:hover {
-    color: #55e88a;
-    border-bottom: 2px solid #55e88a;
-    border-left: 2px solid #55e88a; }
+    color: #00ff00;
+    border-bottom: 2px solid #00ff00;
+    border-left: 2px solid #00ff00; }
   .btn__darkBtn--sm:link, .btn__darkBtn--sm:visited {
     text-decoration: none;
     padding: 0 1rem;
@@ -96,15 +93,15 @@ span {
     display: inline-block;
     border-radius: inherit;
     transition: all .2s ease;
-    color: #007b2c;
-    border-left: 2px solid #007b2c; }
+    color: #00ff00;
+    border-left: 2px solid #00ff00; }
     .btn__darkBtn--sm:link:hover, .btn__darkBtn--sm:visited:hover {
       background: transparent;
       border-radius: inherit; }
   .btn__darkBtn--sm:hover {
-    border-bottom: 2px solid #55e88a;
-    border-left: 2px solid #55e88a;
-    color: #55e88a; }
+    border-bottom: 2px solid #00ff00;
+    border-left: 2px solid #00ff00;
+    color: #00ff00; }
 
 #mc_embed_signup {
   display: block; }
@@ -113,13 +110,13 @@ span {
   background: transparent;
   border: none;
   font-size: 2rem;
-  color: #fff;
-  border-left: 2px solid #fff;
+  color: #00ff00;
+  border-left: 2px solid #00ff00;
   padding: 1rem 2rem;
   cursor: pointer;
   transition: all .4s ease; }
   #mc-embedded-subscribe:hover {
-    border-bottom: 2px solid #fff; }
+    border-bottom: 2px solid #00ff00; }
 
 .mc-embed-div {
   text-align: center; }
@@ -129,22 +126,21 @@ span {
   -moz-perspective: 120rem;
   -webkit-perspective: 120rem;
   position: relative;
-  height: 43rem; }
+  height: 50rem; }
   .cards__side {
-    height: 43rem;
+    height: 50rem;
     transition: all .8s ease;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    border-radius: 1rem;
     backface-visibility: hidden;
     box-shadow: 0 3px 10px 0 rgba(233, 240, 243, 0.5); }
     .cards__side--front {
-      background: #fff; }
+      border: 1px solid #55e88a; }
     .cards__side--back {
       transform: rotateY(180deg);
-      background-image: linear-gradient(to right, #55e88a, #007b2c); }
+      background-image: linear-gradient(to right, #55e88a, lime); }
   .cards:hover .cards__side--front {
     transform: rotateY(-180deg); }
   .cards:hover .cards__side--back {
@@ -158,16 +154,15 @@ span {
   list-style: none; }
 
 .header {
-  background: url("../images/header-background.jpg") no-repeat 50%/cover;
+  background: linear-gradient(to right bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../images/header-background.jpg") no-repeat 50%/cover;
   background-attachment: fixed;
   background-position: center;
-  height: 95vh;
+  filter: brightness(0.85);
+  height: 100vh;
   position: relative;
-  color: #55e88a;
+  color: #00ff00;
   z-index: 1;
-  animation: moveInDown .5s ease-out;
-  -webkit-clip-path: polygon(0% 0%, 100% 0, 100% 85vh, 0 100%);
-  clip-path: polygon(0% 0%, 100% 0, 100% 85vh, 0 100%); }
+  animation: moveInDown .5s ease-out; }
   .header__logo {
     animation: moveInRight 1.5s ease-out;
     font-size: 2rem;
@@ -207,6 +202,16 @@ span {
       display: block; }
     .header__heading__btn {
       display: inline-block; }
+
+.rks {
+  font-size: 30rem;
+  text-transform: uppercase;
+  display: inline-block;
+  -webkit-background-clip: text;
+  color: transparent;
+  background-image: url("../images/grass.jpg");
+  background-position: center;
+  font-family: fantasy; }
 
 .composition {
   position: relative; }
@@ -251,27 +256,38 @@ span {
 .margin-bottom-lg {
   margin-bottom: 8rem; }
 
-.paragraph:not(:last-child) {
-  margin-bottom: 3rem; }
+.paragraph:last-child {
+  margin-bottom: 0; }
 
 .footer {
-  margin-top: -2rem;
-  background-color: #007b2c; }
+  margin-top: -2rem; }
   .footer__logo {
     display: block;
     text-align: center;
     font-size: 3rem; }
     .footer__logo--link {
-      color: #fff !important; }
+      color: #55e88a !important; }
   .footer__navigation {
     text-align: center; }
   .footer__li {
     display: inline;
     padding: 0 2rem;
-    border-right: 1px solid #007b2c; }
+    border-right: 1px solid #00ff00; }
+    .footer__li:last-child {
+      border-right: none; }
   .footer__links {
     font-size: 3rem;
-    color: #f7f7f7; }
+    color: #55e88a; }
+    .footer__links-facebook {
+      color: #3b5998; }
+    .footer__links-instagram {
+      color: #b71a7f; }
+    .footer__links-linkedin {
+      color: #3b5998; }
+    .footer__links-dribble {
+      color: #cc5496; }
+    .footer__links-github {
+      color: #5c6bc0; }
 
 .more {
   display: flex;
@@ -279,10 +295,8 @@ span {
   justify-content: center; }
   .more__info {
     margin: 2rem;
-    padding: 1rem;
-    background: #007b2c;
     color: #55e88a;
-    transform: skewX(-15deg); }
+    font-size: 1.4rem; }
 
 .heading__onMainBg--main {
   font-size: 4rem;
@@ -290,7 +304,8 @@ span {
   display: inline-block;
   -webkit-background-clip: text;
   color: transparent;
-  background-image: linear-gradient(to right bottom, rgba(0, 123, 44, 0.9), rgba(85, 232, 138, 0.9)); }
+  background-image: linear-gradient(to right bottom, rgba(0, 255, 0, 0.9), rgba(85, 232, 138, 0.9));
+  background-attachment: fixed; }
 
 .heading__onMainBg--sub {
   display: block; }
@@ -301,7 +316,7 @@ span {
   display: inline-block;
   -webkit-background-clip: text;
   color: transparent;
-  background-image: linear-gradient(to left, rgba(85, 232, 138, 0.8), rgba(0, 123, 44, 0.8)); }
+  background-image: linear-gradient(to left, rgba(85, 232, 138, 0.8), rgba(0, 255, 0, 0.8)); }
 
 .text-center {
   text-align: center; }
@@ -315,6 +330,21 @@ span {
 
 .opacity {
   opacity: .7; }
+
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  -webkit-filter: grayscale(100%);
+  /* Safari 6.0 - 9.0 */
+  filter: blur(5px); }
+  .bg-video__content {
+    width: 100%;
+    height: 100%;
+    object-fit: fill; }
 
 .row {
   max-width: 114rem;
@@ -350,27 +380,25 @@ span {
   display: none; }
 
 .navigation__button {
-  width: 5.5rem;
-  height: 5.5rem;
+  background: #000000;
+  width: 4.5rem;
+  height: 4.5rem;
   position: fixed;
   top: 2rem;
-  right: 2rem;
-  background-color: #fff;
-  border-radius: 50%;
+  right: 3rem;
   z-index: 200;
-  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.2);
   text-align: center; }
 
 .navigation__background {
-  height: 5.5rem;
-  width: 5.5rem;
+  height: 3.5rem;
+  width: 3.5rem;
   border-radius: 50%;
   position: fixed;
   top: 2rem;
-  right: 2rem;
+  right: 3rem;
   z-index: 100;
-  background-image: linear-gradient(to left, rgba(255, 255, 255, 0.7), rgba(247, 247, 247, 0.7));
-  transition: transform 0.8s cubic-bezier(0.6, -0.28, 0.735, 0.045); }
+  background: radial-gradient(#55e88a, #00ff00);
+  opacity: .5; }
 
 .navigation__nav {
   height: 100vh;
@@ -380,7 +408,7 @@ span {
   z-index: 150;
   opacity: 0;
   width: 0%;
-  transition: opacity 0.8s cubic-bezier(0.6, -0.28, 0.735, 0.045); }
+  transition: .25s ease; }
 
 .navigation__list {
   position: absolute;
@@ -410,20 +438,19 @@ span {
   transform: translateX(40%); }
 
 .navigation__checkbox:checked ~ .navigation__background {
-  transform: scale(35); }
+  transform: scale(60); }
 
 .navigation__checkbox:checked ~ .navigation__nav {
   width: 100%;
   opacity: 1; }
 
 .navigation__icon {
-  position: relative;
-  margin-top: 2.7rem; }
+  position: relative; }
   .navigation__icon, .navigation__icon::before, .navigation__icon::after {
     width: 3rem;
     height: 2px;
     display: inline-block;
-    background-color: #007b2c; }
+    background-color: #00ff00; }
   .navigation__icon::before, .navigation__icon::after {
     content: "";
     position: absolute;
@@ -450,54 +477,100 @@ span {
 
 .logo-link:link, .logo-link:visited {
   text-decoration: none;
-  color: #55e88a; }
+  color: #00ff00;
+  font-size: 2.5rem; }
 
 .intro {
   background: #f7f7f7;
   margin-top: -10vh;
-  padding-top: 14rem;
+  padding-top: 5rem;
   transform: skewY(-2deg);
-  position: relative; }
+  position: relative;
+  z-index: 1; }
   .intro > * {
     transform: skewY(2deg); }
   .intro__composition {
     height: 30rem; }
   .intro__section-1 {
-    border-right: 1px solid #007b2c;
+    border-right: 1px solid #00ff00;
     padding-right: 2rem; }
   .intro__section-2 {
     padding-right: 2rem; }
 
 .about {
   transform: skewY(-2deg);
-  background: #000000;
-  color: #fff;
-  margin-top: -1rem; }
-  .about > * {
-    transform: skewY(2deg); }
-  .about__composition {
-    height: 30rem; }
-
-.experience {
-  background: linear-gradient(to right bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../images/header-background.png") no-repeat 50%/cover;
+  background: linear-gradient(to right bottom, rgba(0, 0, 0, 0.6), black), url("../images/intro-background.jpg") no-repeat 50%/cover;
   background-attachment: fixed;
   background-position: center;
+  color: #fff;
+  margin-top: -1px; }
+  .about > * {
+    transform: skewY(2deg); }
+  .about__section {
+    max-width: 100rem;
+    margin: 0 auto; }
+
+.experience {
+  background: #f7f7f7;
   transform: skewY(-2deg);
   positive: relative;
-  margin-top: -1rem;
-  color: #fff; }
+  margin-top: -1rem; }
   .experience__icons {
-    font-size: 3rem;
+    font-size: 4rem;
     justify-content: center;
     display: flex;
     padding: 2rem;
-    color: #000000;
+    color: #00ff00;
     font-weight: 100;
     border-bottom: 1px solid #55e88a; }
-  .experience__content-box {
-    text-align: center;
-    color: #007b2c;
-    font-weight: 500; }
+  .experience__heading-design {
+    background: linear-gradient(to right bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url("../images/sketches.jpg") no-repeat 50%/cover;
+    color: #fff;
+    font-weight: 300;
+    background-attachment: fixed;
+    background-size: cover;
+    clip-path: polygon(0 0, 100% 0, 100% 82%, 0 100%);
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 82%, 0 100%);
+    padding: 5rem 0 6.6rem;
+    border-bottom: 1px solid #00ff00; }
+  .experience__heading-frontend {
+    background: linear-gradient(to right bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url("../images/frontend.jpg") no-repeat 50%/cover;
+    color: #fff;
+    font-weight: 300;
+    background-attachment: fixed;
+    background-size: cover;
+    clip-path: polygon(0 0, 100% 0, 100% 82%, 0 100%);
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 82%, 0 100%);
+    padding: 5rem 0 6.6rem;
+    border-bottom: 1px solid #00ff00; }
+  .experience__heading-backend {
+    background: linear-gradient(to right bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url("../images/database.png") no-repeat 50%/cover;
+    color: #fff;
+    font-weight: 300;
+    background-attachment: fixed;
+    background-size: cover;
+    clip-path: polygon(0 0, 100% 0, 100% 82%, 0 100%);
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 82%, 0 100%);
+    padding: 5rem 0 6.6rem;
+    border-bottom: 1px solid #00ff00; }
+  .experience__heading-span {
+    width: 50%;
+    float: right;
+    box-decoration-break: clone;
+    -webkit-box-decoration-break: clone;
+    font-weight: 400;
+    font-size: 3rem;
+    background: #00ff00; }
+  .experience__heading-3 {
+    background: linear-gradient(to right bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url("../images/sketches.jpg") no-repeat 50%/cover;
+    color: #fff;
+    font-weight: 300;
+    background-attachment: fixed;
+    background-size: cover;
+    clip-path: polygon(0 0, 100% 0, 100% 82%, 0 100%);
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 82%, 0 100%);
+    padding: 5rem 0 6.6rem;
+    border-bottom: 1px solid #00ff00; }
   .experience__content-box-back {
     position: absolute;
     top: 50%;
@@ -510,61 +583,69 @@ span {
     transform: skewY(2deg); }
 
 .projects {
-  background: #f7f7f7;
+  background: #fff;
+  border-bottom: 1px solid #00ff00;
+  border-top: 1px solid #00ff00;
   text-align: center;
-  transform: skewY(-2deg);
-  margin-top: -1rem; }
+  transform: skewY(-2deg); }
   .projects > * {
     transform: skewY(2deg); }
 
 .projects-wrap {
   display: inline-flex;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  margin: .2rem auto; }
   .projects-wrap__fig {
     position: relative;
     max-width: 35rem;
-    margin: 0 auto; }
+    margin: 1rem;
+    height: 20rem; }
     .projects-wrap__fig img {
+      position: relative;
       width: 100%;
       height: 20rem;
-      border-radius: .5rem;
-      transition: all .8s;
-      transform: scale(0.9);
-      box-shadow: 0 5px 5px 0 rgba(233, 240, 243, 0.5); }
+      background: #fff;
+      -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+      -mox-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset; }
   .projects-wrap__caption {
     position: absolute;
-    top: 27%;
-    left: 50%;
-    opacity: 0;
-    color: #007b2c;
-    font-size: 1.4rem;
-    transition: all .8s;
+    top: 0%;
+    left: 0%;
+    color: #00ff00;
+    display: none;
     backface-visibility: hidden;
-    transition: all .8s ease;
     text-align: center;
     z-index: 5000; }
+  .projects-wrap__description {
+    position: absolute;
+    top: 37%;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: all .8s ease-out; }
   .projects-wrap:hover .projects-wrap__caption {
     opacity: 1;
-    transform: translate(-50%, 20%);
-    width: 100%; }
+    width: 100%;
+    background: #000000;
+    color: #fff;
+    width: 100%;
+    height: 100%;
+    font-size: 1.4rem;
+    display: block;
+    transform: scale(1.003); }
   .projects-wrap:hover img {
-    transform: scale(1.1);
     text-align: center;
-    z-index: 100;
-    filter: blur(2px) grayscale(100%); }
+    z-index: 100; }
 
-.contact {
-  background: linear-gradient(to right bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../images/header-background.png") no-repeat 50%/cover;
-  background-attachment: fixed;
-  background-position: center;
-  transform: skewY(-2deg);
-  color: #007b2c; }
-  .contact > * {
-    transform: skewY(2deg); }
-
-@media (max-width: 658px) {
-  .about__composition {
-    height: 23rem; } }
+.subscribe {
+  position: relative;
+  margin-top: -2rem; }
+  .subscribe__content {
+    background: #fff;
+    opacity: .8;
+    padding-top: 4rem; }
+  .subscribe__content-heading {
+    color: #55e88a; }
 
 @media (max-width: 48em) {
   .intro__section-1 {
