--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -8,9 +8,9 @@
 	&:link,
 	&:visited{
 	@include btn-sm;
-	border: 2px solid $color-secondary;
+	border: 2px solid $color-main;
     background: transparent;
-	color: $color-secondary;
+	color: $color-main;
 	transition: all .4s ease;
 	}
     &:hover{
@@ -38,9 +38,9 @@
 	border-left: 2px solid $color-main;
 	}
 	&:hover{
-	color: $color-secondary;
-	border-bottom: 2px solid $color-secondary;
-	border-left: 2px solid $color-secondary;
+	color: $color-main;
+	border-bottom: 2px solid $color-main;
+	border-left: 2px solid $color-main;
 	}
 	}
 	}
@@ -55,9 +55,9 @@
 	border-left: 2px solid $color-main;
 	}
 	&:hover{
-	border-bottom: 2px solid $color-secondary;
-	border-left: 2px solid $color-secondary;
-	color: $color-secondary;
+	border-bottom: 2px solid $color-main;
+	border-left: 2px solid $color-main;
+	color: $color-main;
 	}
 	}
 	}
@@ -71,13 +71,13 @@
 	background: transparent;
 	border: none;
 	font-size: 2rem;
-	color: $color-white;
-	border-left: 2px solid $color-white;
+	color: $color-main;
+	border-left: 2px solid $color-main;
 	padding: 1rem 2rem;
 	cursor: pointer;
 	transition: all .4s ease;
 	&:hover{
-	border-bottom: 2px solid $color-white;
+	border-bottom: 2px solid $color-main;
 	}
 
 }
