--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -13,6 +13,7 @@
 @import "components/spacing";
 @import "components/footer";
 @import "components/typo";
+@import "components/bg-video";
 
 @import "layouts/grid";
 @import "layouts/navigation";
